--- a/index.ipynb
+++ b/index.ipynb
@@ -74,11 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art vandelay'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vandelay # \"ART VANDELAY\""
    ]
   },
   {
