automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "<function str.capitalize>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
