automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.capitalize>"
+       "'Art vandelay'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
