--- a/index.ipynb
+++ b/index.ipynb
@@ -74,22 +74,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "'ART VANDELAY'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art vandelay\".capitalize() # \"ART VANDELAY\""
+    "\"art vandelay\".upper() # \"ART VANDELAY\""
    ]
   },
   {
