automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,13 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art vandelay'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
+    "art_vandelay = \"art vandelay\".capitalize() # 'Art Vandelay'\n",
     "art_vandelay"
    ]
   },
