--- a/index.ipynb
+++ b/index.ipynb
@@ -144,22 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art vandelay'"
+       "'Art Vandelay'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "art_vandelay = \"art vandelay\".capitalize() # 'Art Vandelay'\n",
+    "art_vandelay = \"art vandelay\".title() # 'Art Vandelay'\n",
     "art_vandelay"
    ]
   },
