--- a/index.ipynb
+++ b/index.ipynb
@@ -228,14 +228,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wwww.vandelay.com'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "web_address = 'wwww.' vandelay.com' # 'www.vandelay.com'\n",
+    "web_address = 'wwww.' + 'vandelay.com' # 'www.vandelay.com'\n",
     "web_address"
    ]
   },
